Fix blurry border on checkboxes

--- a/src/scss/imports/mixins/_mixin_mode_custom_properties.scss
+++ b/src/scss/imports/mixins/_mixin_mode_custom_properties.scss
@@ -12,6 +12,7 @@
     --color-state-disabled: #{$color-state-disabled};
     --color-in-header: #{$color-in-header};
     --color-divider: #{$color-divider};
+    --color-footer: #{$color-state};
     --pseudo-header-image: url('../../images/bg-desktop-light.jpg');
     --switch-mode-image: url('../../images/icon-moon.svg');
 }
@@ -26,6 +27,7 @@
     --color-state-disabled: #{$color-dark-very-dark-grayish-blue};
     --color-in-header: #{$color-white};
     --color-divider: #{$color-dark-grayish-blue};
+    --color-footer: #{$color-state};
     --pseudo-header-image: url('../../images/bg-desktop-dark.jpg');
     --switch-mode-image: url('../../images/icon-moon.svg');
 }
