--- a/src/scss/imports/modules/_info_footer.scss
+++ b/src/scss/imports/modules/_info_footer.scss
@@ -6,6 +6,6 @@
     font-size: $font-size-90;
     font-size: var(--font-size-90);
     text-align: center;
-    color: $color-state-disabled;
-    color: var(--color-state-disabled);
+    color: $color-state;
+    color: var(--color-footer);
 }
