--- a/src/scss/imports/settings/_variables.scss
+++ b/src/scss/imports/settings/_variables.scss
@@ -34,6 +34,7 @@ $color-state-hover: $color-very-dark-grayish-blue;
 $color-state-disabled: $color-very-light-grayish-blue;
 $color-in-header: $color-white;
 $color-divider: $color-light-grayish-blue;
+$color-checkbox-border: mix($color-white, $color-light-grayish-blue);
 
 /* font-sizes */
 $font-size-90: 1.4rem;
